add java version