@@ -1,6 +1,8 @@
 package org.psawesome;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 
 /**
@@ -15,15 +17,33 @@ import java.util.List;
  * @since 20. 8. 27. Thursday
  */
 public class Solution {
-  int totCount;
 
-  public Solution setTotCount(int totCount) {
-    this.totCount = totCount;
-    return this;
-  }
+  public List<List<Integer>> threeSum(int[] nums) {
+    var result = new ArrayList<List<Integer>>();
+    var isContains = new HashSet<List<Integer>>();
+    Arrays.sort(nums);
 
-  public List<List<Integer>> threeSum(int[] ints) {
+    for (int i = 0; i < nums.length - 2; i++) {
+      int left_idx = i + 1, right_idx = nums.length - 1;
 
-    return Arrays.asList(Arrays.asList(-1, 0, 1), Arrays.asList(-1, -1, 2));
+      while (left_idx < right_idx) {
+        var sum = nums[i] + nums[left_idx] + nums[right_idx];
+        if (sum < 0) {
+          left_idx++;
+        } else if (sum > 0) {
+          right_idx--;
+        } else {
+          final List<Integer> anInt = List.of(nums[i], nums[left_idx], nums[right_idx]);
+          if (!isContains.contains(anInt)) {
+            result.add(anInt);
+            isContains.add(anInt);
+          }
+
+          left_idx++;
+          right_idx--;
+        }
+      }
+    }
+    return result;
   }
 }
